# supravim

./: .gitlab-ci.yml  6.0_CHANGELOG.fr.md  6.0_CHANGELOG.md  CHANGELOG.fr.md  CHANGELOG.md  ChangeLog.md  LICENSE  Makefile  README.md  _supravim  create_package.sh  getRepoPath  gresource.xml  info.in  install.sh  install_vim.sh  installer.sh  installer_dev.sh  main.vala  meson.build  meson_options.txt  suprabrain  supramake  suprapack_build.sh  supravim  vimrc  vimrc.in
completions/: meson.build  supravim.bash  supravim.zsh
data/: info.in  pacman_vim.desktop  post_install  post_install.sh  pre_install  snake_vim.desktop  style.css  supravim_achievements.h  supravim_ascii  supravim_mime.desktop  uninstall  vimrc
data/snippets/: c.json  cpp.json  vala.json
data/supravim/: achievements.json  vimrc
data/supravim/data/snippets/: c.json  cpp.json  javascript.json  rust.json  typescript.json  vala.json
data/supravim/lsp.d/: Pylance.json  ansible-lsp.json  asm.json  bash-lsp.json  blueprint.json  c3lsp.json  ccls.json  clangd.json  cmake.json  css-lsp.json  dart-lsp.json  docker-lsp.json  golsp.json  html-lsp.json  jdtls.json  jinja-lsp.json  json-lsp.json  kotlin-lsp.json  lua-lsp.json  markdown-lsp.json  meson-lsp.json  nimlangserver.json  omnisharp.json  php-lsp.json  pylsp.json  rust-analyzer.json  sql-lsp.json  tailwind-lsp.json  terraform-lsp.json  toml-lsp.json  typescript-lsp.json  vim-lsp.json  vls.json  vue3.json  yaml-lsp.json  zig.json
data/supravim/vim/autoload/: CheckVersion.vim  SupraNotification.vim  SupraPopup.vim  Welcome.vim  dracula.vim  onedark.vim  supraconfig.vim  supraload.vim
data/supravim/vim/colors/: atom.vim  catppuccin_frappe.vim  catppuccin_latte.vim  catppuccin_macchiato.vim  catppuccin_mocha.vim  dracula.vim  gruvbox.vim  iceberg.vim  kyotonight.vim  molokai.vim  onedark.vim  pablo.vim  rosepine.vim  rosepine_dawn.vim  rosepine_moon.vim  supracool.vim  supradark.vim  supradeep.vim  supraevening.vim  supralight.vim  supraonedark.vim  suprawarm.vim  suprawarmer.vim  tokyonight.vim  tokyostorm.vim  vscode.vim
data/supravim/vim/ftdetect/: j2.vim  yaml.vim
data/supravim/vim/indent/: blueprint.vim
data/supravim/vim/plugin/: LspInterface.vim  SupraCommentary.vim  SupraNotification.vim  SupraSearch.vim  SupraWater.vala  SupraWater.vim  TerminalFloat.vim  Whisper.vim  YankHigh.vim  ft_count_line.vim  fuzzymake.vim  fuzzytags.vim  nerdtreetabs.vim  supracom.vim  supravim-bettercomment.vim
data/supravim/vim/syntax/: asm.vim  c.vim  cpp.vim  go.vim  java.vim  javascript.vim  supravim_welcome.vim  vala.vim
data/vim/plugin/: supracom.vim
data/zsh/site-functions/: _supravim
patch/: more-icons.patch
plugins/plugin-42formatter/: info
plugins/plugin-asm-lsp/: info
plugins/plugin-autobear/: info
plugins/plugin-blueprint/: info
plugins/plugin-c3/: info
plugins/plugin-github-copilot/: info
plugins/plugin-kyotonight/: info
plugins/plugin-lsp-client/: info
plugins/plugin-makeheader/: info
plugins/plugin-meson-lsp/: info
plugins/plugin-nasm-linter/: info
plugins/plugin-norminette/: info
plugins/plugin-rust-lsp/: info
plugins/plugin-tagbar/: info
plugins/plugin-tokyonight/: info
plugins/plugin-vala-lsp/: info
plugins_supravim/plugin-42formatter/: info
plugins_supravim/plugin-c3/: info
plugins_supravim/plugin-dart/: info
plugins_supravim/plugin-github-copilot/: PKGBUILD  supravim_copilot.vim
plugins_supravim/plugin-indent-rainbow/: info
plugins_supravim/plugin-lang-blueprint/: info
plugins_supravim/plugin-lang-c3/: info
plugins_supravim/plugin-lang-vala/: info
plugins_supravim/plugin-lsp-client/: 0001-Add-better-symbols.patch  0001-Remove-snippet-in-completion-and-add-symbolic.patch  0001-Use-echoerr-instead-of-echom.patch  LspInterface.vim  PKGBUILD  plugin-lsp-client_2.0.5_any.suprapack  vim-lsp.vim
plugins_supravim/plugin-makeheader/: info
plugins_supravim/plugin-meson-lsp/: info
plugins_supravim/plugin-norminette/: PKGBUILD  info  plugin-norminette_3.0_any.suprapack
plugins_supravim/plugin-norminette/pkg/usr/: info
plugins_supravim/plugin-polyglot/: PKGBUILD
plugins_supravim/plugin-prabirshrestha-vim-lsp/: 0001-Add-Better-Border-for-vim-lsp.patch  LspInterface.vim  PKGBUILD  vim-lsp.vim
plugins_supravim/plugin-python-lsp/: info
plugins_supravim/plugin-syntastic/: PKGBUILD  info
plugins_supravim/plugin-tagbar/: PKGBUILD  tagbar.vim
plugins_supravim/plugin-typescript-lsp/: info
plugins_supravim/plugin-vala-lsp/: info
po/: POTFILES  fr.po  meson.build  supravim.pot
share/: lsp_c
site/: achievements.html  index.html  robots.txt  sitemap.xml  themes.html
snippets/: c.json  cpp.json  make.json  vala.json
src/: Cfg.vala  Element.vala  General.vala  Modificator.vala  Status.vala  Theme.vala  Variable.vala  main.vala  meson.build
src/libsupravim/: Achievements.vala  BuildConfig.vala.in  Cfg.vala  Export.vala  Globals.vala  Options.vala  Plugin.vala  PluginLst.vala  SupraParser.vala  Theme.vala  meson.build
src/supravim/: ArrayElement.vala  Cfg.vala  Command.vala  Config.vala.in  Element.vala  General.vala  Modificator.vala  Options.vala  Plugin.vala  PluginLst.vala  Status.vala  SupraParser.vala  Theme.vala  Utils.vala  main.vala  meson.build
src/supravim-server/: Achievements.vala  Command.vala  Discord.vala  LspServer.vala  Monitor.vala  Stdin.vala  SupportLang.vala  Utils.vala  main.vala  meson.build
subprojects/: yyjson.wrap
test/: Makefile  README.md  compile.sh  driver.vim  external-deps.txt  lib.sh  py_supravim  run.sh  smoke.sh  unit.sh
test/stubs/: commands.vim
test/stubs/autoload/: airline.vim
test/unit/: t_utils.vim
tools/: update-translations.py
tools/achievements/: achievements_template.html  build.sh  check_no_leak.py  gen_achievements.py
tools/themes/: build.sh  gen_themes.py  parse_themes.py  themes.json  themes_template.html
usr/: info  post_install.sh  pre_install.sh
usr/share/supravim/: add_config_rc  apply_cfg  create_cfg  vimrc
vapi/: yyjson.vapi
vim/colors/: gruvbox.vim  onehalf.vim
vim/plugin/: supracom.vim
(+194 files in other folders)
